# SimuladorMIPS

./: .gitignore  CMakeLists.txt  Entrada.in  Makefile  README.md  main.c
Auxiliar/: binary_ops.c  binary_ops.h  custom_string_ops.c  custom_string_ops.h  linked_list.c  linked_list.h
Core/: cpu.c  cpu.h  instr_mem.c  instr_mem.h  io.c  io.h  ram.c  ram.h  register.c  register.h  structs.h
